addition click for alert

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,9 @@
 <h1>Hello</h1>
 <footer>
 	<hr>
-	<p>abdelwahidyasser1@gmail.com</p>
+	<p style="text-align: center;"
+	onclick="alert('USELESS EMAIL');">
+	abdelwahidyasser1@gmail.com</p>
 </footer>
 </body>
 </html>
